Follow new conventions

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </article>
     </main>
 
-    <div class="submitArticle center">
+    <div class="submit-article center">
         <label>Nieuws titel:</label>
         <input type="text" />
         <label>Inhoud:</label>
